Mobile style updates; fixed logo on mobile and mobile nav menu

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -45,7 +45,7 @@ $color-orange-light: lighten($color-orange, 5%);
 $color-orange-dark: darken($color-orange, 5%);
 
 //Yellow
-$color-yellow: #eeff00;
+$color-yellow: #f9ce20;
 $color-yellow-light: lighten($color-yellow, 5%);
 $color-yellow-darken: darken($color-yellow, 5%);
 
